# sgs-bacen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml
examples/c_example/: Makefile  sgs_example.c
examples/julia_example/SGS.jl/contrib/: generator.jl
examples/julia_example/SGS.jl/src/: deps.jl
examples/julia_example/SGS.jl/test/: runtests.jl
examples/julia_ffi_example/SGS.jl/: Project.toml
examples/julia_ffi_example/SGS.jl/contrib/: generator.jl
examples/julia_ffi_example/SGS.jl/src/: SGS.jl  api.jl
examples/julia_ffi_example/SGS.jl/test/: runtests.jl
examples/julia_ffi_example/SGSJulia/: Project.toml
examples/julia_ffi_example/SGSJulia/contrib/: generator.toml
examples/julia_ffi_example/SGSJulia/src/: SGSJulia.jl  api.jl  deps.jl
examples/julia_ffi_example/SGSJulia/test/: runtests.jl
examples/rust_example/: Cargo.toml
examples/sgslib_example/: Cargo.toml
examples/src/: main.rs
ffi/: Cargo.toml  build.rs
ffi/include/: sgs.h
ffi/src/: lib.rs
samples/: getValoresSeriesXML_request.xml  getValoresSeriesXML_response.xml
sgscli/: Cargo.toml
sgscli/src/: main.rs
sgslib/: Cargo.toml
sgslib/src/: bindings.rs  lib.rs  messages.rs  ports.rs  series.rs
src/: main.rs
src/sgs/: bindings.rs  messages.rs  mod.rs  ports.rs  series.rs  services.rs
