[package]
name = "sgs-bacen"
version = "0.1.0"
authors = [ "Felipe Noronha <felipenoris@gmail.com>" ]
license = "MIT"
description = "A SOAP client for Brazilian Central Bank's Time Series Management System <https://www3.bcb.gov.br/sgspub>"
homepage = "https://github.com/felipenoris/sgs-bacen-rs"
repository = "https://github.com/felipenoris/sgs-bacen-rs"
readme = "README.md"
edition = "2021"

[dependencies]
yaserde = "0.8"
yaserde_derive = "0.8"
reqwest = { version = "0.11", features =["blocking"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
xml-rs = "0.8"